--- a/Exercicios/ex022/fundo002.html
+++ b/Exercicios/ex022/fundo002.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personalização dos fundos</title>
+    <style>
+        body {
+            background-image: url("imagens/pattern001.png");
+            background-size: 100px;
+            background-repeat: repeat-x;
+        }
+        h1 {
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <h1>Teste de Aplicação de Fundo</h1>
